package(
    default_visibility = ["//visibility:public"],
)

licenses(["notice"])  # Apache 2.0

cc_library(
    name = "port",
    deps = [
        "//mace/port/android:port_android",
        "//mace/port/darwin:port_darwin",
        "//mace/port/linux:port_linux",
    ],
)

cc_library(
    name = "port_api",
    hdrs = [
        "env.h",
        "file_system.h",
        "logger.h",
    ],
    deps = [
        "//mace/public",
    ],
)

cc_library(
    name = "port_base",
    srcs = [
        "env.cc",
        "logger.cc",
    ],
    deps = [
        ":port_api",
        "//mace/utils",
    ],
)

cc_test(
    name = "port_test",
    testonly = 1,
    srcs = glob([
        "*_test.cc",
    ]),
    linkstatic = 0,
    deps = [
        ":port",
        "@gtest//:gtest",
        "@gtest//:gtest_main",
    ],
)
